src/assets/scss/03_organism/_team.scss
.o-team {
    display: flex;
    position: relative;

    h2.people {
        padding-left: 40px;
        margin-bottom: 1rem;

        @include breakpoints("tablet") {
            padding-left: 0;
            margin-left: 80px;
        }

        @include breakpoints("lg-desktop") {
            margin-left: 0;
        }
    }

    .expanded-team-member {
        align-items: center;
        background: rgba(get-color-primary("fresh"), 0);
        display: flex;
        flex-direction: column-reverse;
        height: 100.5%;
        justify-content: center;
        position: absolute;
        top: 0;
        width: 100vw;
        z-index: 1;

        p {
            text-transform: lowercase;
        }

        &-text {
            color: get-color-primary("white");
            opacity: 0;
            position: initial;
            width: 80%;

            img {
                width: 10%;

                @include breakpoints("tablet") {
                    width: 7%;
                }

                @include breakpoints("lg-laptop") {
                    width: 10%;
                }
            }

            @include breakpoints("tablet") {
                left: 14%;
                max-width: none;
                position: absolute;
                top: 16%;
                width: initial;
            }

            &-name {
                @include font-size(29px);
                margin-bottom: 0.6em;

                @media (min-width: 360px) {
                    @include font-size(35px);
                }

                @include breakpoints("sm-tablet") {
                    @include font-size("medium-large");
                }

                @include breakpoints("tablet") {
                    margin-bottom: 0;
                }

                @include breakpoints("lg-laptop") {
                    @include font-size("large");
                }

                @include breakpoints("sm-desktop") {
                    @include font-size("largish");
                }
            }

            &-position {
                margin-top: 0.3em;
                @include font-size("small");
            }

            &-egg {
                @include font-size("smallest");

                img {
                    vertical-align: super;
                    width: 6%;
                }
            }
        }

        &-image-div {
            display: flex;
            justify-content: center;
            opacity: 0;
            position: relative;

            @include breakpoints("tablet") {
                display: block;
                left: 57%; //animates to 54%
                max-width: 691px;
                position: absolute;
                top: 24%; //animates to 21%
            }

            @include breakpoints("laptop") {
                left: 54%; //animates to 51%
            }

            @include breakpoints(1250px) {
                left: 53%; //animates to 51%
                top: 24%; //animates to 19%
            }

            @include breakpoints("lg-desktop") {
                left: 48%; //animates to 46%
                top: 23%; //animates to 19%
            }

            @include breakpoints("xl-desktop") {
                left: 42.2%; //animates to 41%
            }

            .expanded-team-member-image {
                // starts here, animation takes it to 162px
                // the other final px widths are noted on the following breakpts - they grow by 60px
                width: 102px;

                @include breakpoints("phone") {
                    // 340px
                    width: 280px;
                }

                @include breakpoints("sm-tablet") {
                    // 429px
                    width: 369px;
                }

                @include breakpoints("tablet") {
                    // 172px
                    width: 112px;
                }

                @include breakpoints("laptop") {
                    // 239px
                    width: 179px;
                }

                @include breakpoints("desktop") {
                    // 303px
                    width: 243px;
                }

                @include breakpoints("lg-desktop") {
                    // 349px
                    width: 289px;
                }
            }

            .expanded-team-member-close-button {
                cursor: pointer;
                left: 89%;
                position: absolute;
                top: 4%;
                width: .6rem;

                @include breakpoints("phone") {
                    left: 90%;
                    top: 5%;
                    width: .9rem;
                }

                @include breakpoints("sm-tablet") {
                    left: 91%;
                    top: 5%;
                }

                @include breakpoints("tablet") {
                    left: 85%;
                    top: 6%;
                    width: .9rem;
                }

                @include breakpoints("laptop") {
                    left: 87%;
                }

                @include breakpoints("lg-desktop") {
                    left: 89%;
                    top: 6%;
                }
            }
        }
    }
}

